<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bg_splash_screen"
    tools:context=".SplashScreen">
    <ImageView
        android:layout_width="120dp"
        android:layout_height="118dp"
        android:src="@drawable/ic_cloud"
        android:contentDescription="@string/cloud" />
    <TextView
        android:layout_width="271dp"
        android:layout_height="39dp"
        android:text="@string/cloudy"
        android:textSize="34sp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:gravity="center"/>
    <TextView
        android:layout_width="229dp"
        android:layout_height="46dp"
        android:text="@string/dont_worry_about_the_weather_we_all_here"
        android:textSize="16sp"
        android:textColor="#54FFFFFF"
        android:gravity="center"
        android:layout_marginTop="10dp"/>
</LinearLayout>