<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="343dp"
    android:layout_height="73dp"
    android:orientation="horizontal"
    android:background="@drawable/bg_item_add_city"
    android:gravity="center"
    android:weightSum="3">

    <ImageView
        android:layout_weight="0"
        android:id="@+id/item_add_city_status"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_weight="2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/item_add_city_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/item_add_city_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"/>
    </LinearLayout>
    <TextView
        android:layout_weight="0"
        android:id="@+id/item_add_city_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_gravity="center" />
</LinearLayout>