<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Detail"
    android:background="#E5E5E5"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:background="@drawable/bg_detail"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
        <ImageView
            android:id="@+id/detail_icon"
            android:layout_width="101dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            tools:ignore="ContentDescription" />
        <TextView
            android:id="@+id/detail_status"
            android:layout_width="226dp"
            android:layout_height="26dp"
            android:text="@string/status"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>
        <TextView
            android:id="@+id/detail_date"
            android:layout_width="300dp"
            android:layout_height="26dp"
            android:text="@string/date"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="343dp"
        android:layout_height="169dp"
        android:background="@drawable/bg_forecast"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="4"
            android:layout_marginTop="20dp"
            android:baselineAligned="false"
            tools:ignore="UselessParent">
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="67.34dp"
                    android:layout_height="40dp"
                    android:text="@string/morning"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_gravity="center"/>
                <TextView
                    android:id="@+id/detail_temp_morning"
                    android:layout_width="67.34dp"
                    android:layout_height="40dp"
                    android:text="@string/temp"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_gravity="center"/>
                <TextView
                    android:id="@+id/detail_feels_like_morning"
                    android:layout_width="67.34dp"
                    android:layout_height="40dp"
                    android:text="@string/feels_like"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="70dp"
                    android:layout_height="40dp"
                    android:text="@string/afternoon"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_gravity="center"/>
                <TextView
                    android:id="@+id/detail_temp_afternoon"
                    android:layout_width="67.34dp"
                    android:layout_height="40dp"
                    android:text="@string/temp"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_gravity="center"/>
                <TextView
                    android:id="@+id/detail_feels_like_afternoon"
                    android:layout_width="67.34dp"
                    android:layout_height="40dp"
                    android:text="@string/feels_like"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="67.34dp"
                    android:layout_height="40dp"
                    android:text="@string/evening"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_gravity="center"/>
                <TextView
                    android:id="@+id/detail_temp_evening"
                    android:layout_width="67.34dp"
                    android:layout_height="40dp"
                    android:text="@string/temp"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_gravity="center"/>
                <TextView
                    android:id="@+id/detail_feels_like_evening"
                    android:layout_width="67.34dp"
                    android:layout_height="40dp"
                    android:text="@string/feels_like"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="67.34dp"
                    android:layout_height="40dp"
                    android:text="@string/night"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/detail_temp_night"
                    android:layout_width="67.34dp"
                    android:layout_height="34dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/temp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
                <TextView
                    android:id="@+id/detail_feels_like_night"
                    android:layout_width="67.34dp"
                    android:layout_height="40dp"
                    android:text="@string/feels_like"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/text"
        android:layout_width="101dp"
        android:layout_height="24dp"
        android:text="@string/details"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toBottomOf="@+id/layout"
        tools:ignore="MissingConstraints"
        android:gravity="center"/>

    <LinearLayout
        android:id="@+id/temp"
        android:layout_width="167.53dp"
        android:layout_height="76dp"
        android:layout_marginTop="17dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@+id/text"
        tools:ignore="MissingConstraints"
        android:background="@drawable/bg_forecast"
        android:gravity="center">
        <ImageView
            android:layout_width="19.87dp"
            android:layout_height="36.67dp"
            android:src="@drawable/ic_temp"
            tools:ignore="ContentDescription" />
        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:orientation="vertical"
            android:gravity="center"
            android:weightSum="2">
            <TextView
                android:id="@+id/detail_temp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:text="@string/temp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/detail_unit"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:text="@string/unit"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:gravity="center"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="167.53dp"
        android:layout_height="76dp"
        app:layout_constraintTop_toBottomOf="@+id/text"
        android:layout_marginTop="17dp"
        app:layout_constraintLeft_toRightOf="@+id/temp"
        android:layout_marginStart="30dp"
        tools:ignore="MissingConstraints"
        android:background="@drawable/bg_forecast"
        android:gravity="center">
        <ImageView
            android:layout_width="19.87dp"
            android:layout_height="36.67dp"
            android:src="@drawable/ic_detail_windy"
            tools:ignore="ContentDescription" />
        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:orientation="vertical"
            android:gravity="center"
            android:weightSum="2">
            <TextView
                android:id="@+id/detail_windy"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:text="@string/windy"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold"/>
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:text="@string/pressure"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:gravity="center"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/uv"
        android:layout_width="167.53dp"
        android:layout_height="76dp"
        android:layout_marginTop="17dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@+id/temp"
        tools:ignore="MissingConstraints"
        android:background="@drawable/bg_forecast"
        android:gravity="center">
        <ImageView
            android:layout_width="19.87dp"
            android:layout_height="36.67dp"
            android:src="@drawable/ic_detail_uv"
            tools:ignore="ContentDescription" />
        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:orientation="vertical"
            android:gravity="center"
            android:weightSum="2">
            <TextView
                android:id="@+id/detail_uv"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:text="@string/uv"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold"/>
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:text="@string/uv_index"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:gravity="center"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="167.53dp"
        android:layout_height="76dp"
        app:layout_constraintTop_toBottomOf="@+id/temp"
        android:layout_marginTop="17dp"
        app:layout_constraintLeft_toRightOf="@+id/uv"
        android:layout_marginStart="30dp"
        tools:ignore="MissingConstraints"
        android:background="@drawable/bg_forecast"
        android:gravity="center">
        <ImageView
            android:layout_width="19.87dp"
            android:layout_height="36.67dp"
            android:src="@drawable/ic_detail_humidity"
            tools:ignore="ContentDescription" />
        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:orientation="vertical"
            android:gravity="center"
            android:weightSum="2">
            <TextView
                android:id="@+id/detail_humidity"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:text="@string/humidity"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold"/>
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:text="@string/humidity"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:gravity="center"/>
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>