<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeSidebar"
    android:background="@drawable/bg_splash_screen"
    android:orientation="vertical"
    android:weightSum="3">
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:weightSum="2">
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            tools:ignore="NestedWeights">
            <TextView
                android:layout_width="119dp"
                android:layout_height="21dp"
                android:text="@string/current_location"
                android:textSize="14sp"
                android:textColor="#83FFFFFF"/>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">
                <ImageView
                    android:layout_width="14dp"
                    android:layout_height="19.47dp"
                    android:src="@drawable/ic_location"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/home_sidebar_current_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:text="@string/location"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </LinearLayout>
        <ImageView
            android:layout_weight="1"
            android:id="@+id/home_sidebar_intent_home"
            android:layout_width="16.67dp"
            android:layout_height="9.52dp"
            android:src="@drawable/ic_intent"
            android:layout_marginTop="20dp"
            tools:ignore="ContentDescription" />
    </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/home_sidebar_add_location"
            android:layout_width="187dp"
            android:layout_height="27dp"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="19dp"
                android:layout_height="21.68dp"
                android:src="@drawable/ic_add_location"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_width="123dp"
                android:layout_height="27dp"
                android:text="@string/add_location"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#FBF99E"
                android:layout_marginStart="15dp"/>
        </LinearLayout>
        <ListView
            android:id="@+id/home_sidebar_list_location"
            android:layout_width="187dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"/>
    </LinearLayout>
    <TextView
        android:id="@+id/home_sidebar_settings"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginStart="20dp"/>

</LinearLayout>